# HSM-II

./: .env.example  .gitignore  .impeccable.md  ABLITERATED_TEST_REPORT.md  AGENTS.md  ARCHITECTURE.generated.md  ARCHITECTURE.md  COMMANDS_GUIDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  EXPERIMENTS.md  GOLDEN_PATH.md  GROUNDED_HSMII_VISION.md  HEARTBEAT.md  KURAMOTO_PROTOCOL_REPORT_2026-02-24.md  KURAMOTO_VALIDATION_PROTOCOL.md  LICENSE  METRICS_README.md  MISSING_FOR_ALL_IN_ONE.md  MODES_DIAGRAM.md  OUROBOROS_HSMII_PHASES.md  README.md  REPL.md  TOOLS_SUITE.md  TRANSFORMATION_SUMMARY.md  banner.txt  companies-lock.json  company-os-up.sh  docker-compose.yml  index.html  open-viz.command  paper.tex  run-hyper-stigmergy-II.command  run-personal-agent.command  rust-doctor.toml  test_abliterated.sh  test_model.sh
.claude/: launch.json
.github/workflows/: ci-cognitive-infra.yml
.memoire/: HEARTBEAT.md  project.json
.serena/: project.yml
agent_tools/manim-video/: SKILL.md
agent_tools/p5js-creative-coding/: SKILL.md
agent_tools/scripts/: kuramoto_protocol_eval.py  test_abliterated.sh
architecture/: hsm-ii-blueprint.ron
certs/: server.crt
claudedocs/: HSM_II_COMPLETE_SYSTEM_REFERENCE.md  MULTI_TENANT_SAAS_ARCHITECTURE.md  STIGMERGIC_DREAM_CONSOLIDATION.md
company-files/: client_registry.md  compliance_matrix.md  kpi_dashboard_template.md  manifest.toml  onboarding_checklist.md
company-files/sop/: crypto_sop.md  (+3 more)
compose/: company-os-postgres.yml
config/: eval_gold.example.json  external_benchmark.example.json  external_claw_code.example.json  external_suite.example.json  external_yc_bench.example.json  external_yc_bench_seed10.json  external_yc_bench_seed6.json  external_yc_bench_seed7.json  external_yc_bench_seed8.json  external_yc_bench_seed9.json  gepa.example.yaml  hsm_harness.example.json
docs/: AGENT_SKILLS.md  BENCHMARK_STACK.md  EVAL_AND_META_HARNESS.md  HSM_NATIVE_BENCH.md  META_HARNESS_BELIEF_STATE.md  README.md  ROADMAP.md
docs-site/: .gitignore  README.md  package.json  sync-docs.mjs  sync-manifest.json
documentation/: README.md
external_integrations/hermes/hermes-bridge/: Cargo.toml
external_integrations/hermes/hermes-bridge/examples/: basic_usage.rs
external_integrations/hermes/hermes-bridge/src/: lib.rs
hermes-bridge/: README.md
hermes-extension/: requirements.txt  server.py
knowledge_base/: Council Grounding.md  Message Bus.md  Semantics.md  Syntax.md
lars/: README.md  export-to-duckdb.py  start-lars.sh  sync-db.sh
migrations/: 20250401120000__company_os.sql  20260401061000__policy_queue_connectors.sql  20260401113000__subagent_collab_improvement.sql  20260401123000__automation_reliability_and_scale.sql  20260401140000__company_agents.sql  20260402120000__task_display_keys.sql  20260402140000__task_run_snapshots.sql  20260403150000__company_context_markdown.sql  20260403160000__company_skills.sql  20260404180000__task_requires_human.sql  20260405200000__company_projects.sql  20260406120000__company_shared_memory.sql  20260407100000__memory_fts_kind_context_notes.sql  20260408120000__task_capability_refs.sql  20260408140000__goals_paperclip_dri.sql  20260409120000__agent_runs.sql  20260409140000__company_issue_labels.sql  20260410120000__company_memory_embedding.sql  20260410200000__signals_and_task_provenance.sql  20260411100000__memory_graph_versioning_provenance.sql  20260411143000__self_improvement_loop.sql  20260412100000__store_promotion_pipeline.sql  20260412153000__memory_engine_substrate.sql  20260412191000__company_credentials.sql  20260413110000__shared_thread_sessions.sql  20260413170000__enterprise_p1_sso_rbac_retention.sql  20260413193000__handoff_action_nonces.sql  20260413213000__connector_control_plane.sql  20260413223000__company_email_operator_queue.sql  20260413233000__company_profile_and_universality.sql  20260414120000__context_repo_publishes.sql  20260415101500__company_tool_catalog.sql  20260416120000__company_default_workspace_root.sql  20260417100000__company_autonomy_scheduler_approval_kpi.sql  20260418120000__company_os_manager_ux.sql
paper/: hsm2.tex
scripts/: agent-chat-capability-matrix-check.sh  agent-chat-endpoint-check.sh  agent-os-milestone1-smoke.sh  aggregate_task_trail_telemetry.py  check_company_drift.py  claude_proxy.mjs  company-os-up.sh  company_os_postgres.sh  company_os_postgres_local.sh  compare_hsm_native_results.py  context_benchmark.sh  demo_multi_agent.sh  eval_memory_ablation.sh  extract_claude_code_from_npm.sh  generate-architecture-md.sh  import_qwen9b.sh  import_qwen_q3km.sh  kuramoto_sweep_select.py  patch_brand_growth.py  patch_company_packs.py  patch_mechanical_rules.py  plot_results.py  portable_base64.sh  run_hsm_native.sh  run_regression_stack.sh  rust-doctor-plan.sh  smoke_e2e.sh  update_company_packs.py  update_company_packs.sh
src/: action.rs  agent.rs  analysis.rs  architecture_blueprint.rs  auth.rs  autonomous_team.rs  batch_runner.rs  clean.rs  columnar_engine.rs  conductor.rs  config.rs  consensus.rs  context_manifest.rs  credential_broker.rs  credential_vault.rs  credential_verifier.rs  cypher_parser.rs  database.rs  disk_backed_vector_index.rs  dream_advisor.rs  dspy.rs  dspy_session.rs  embedded_graph_store.rs  embedding_index.rs  experiment.rs  external_connectors.rs  fs_atomic.rs  governance.rs  graph_runtime.rs  hnsw_index.rs  hyper_stigmergy.rs  hypergraph.rs  investigation_engine.rs  investigation_tools.rs  kuramoto.rs  lib.rs  loop_main.rs  main.rs  memory.rs  meta_graph.rs  (+35 more)
static/: chat.html
tasks/: lessons.md  todo.md
test_suite/: communication_tests.rs  council_tests.rs  e2e_workflow_test.rs  integration_tests.rs  optimize_anything_integration_tests.rs
tests/: ab_benchmark.rs  dks_tests.rs  harness_gaps.rs  harness_runtime.rs  llm_stream_api.rs  model_resolution.rs  stigmergic_council_tests.rs
training/: Dockerfile  README.md  docker-compose.yml  train_script.py
vault/: README.md
visual-explainer/: SKILL.md
viz/: index.html
web/: next.config.ts  package-lock.json  package.json  tsconfig.json
web_interface/: README.md  index.html
(+692 files in other folders)
