[package]
name = "hyper-stigmergy"
version = "0.1.0"
edition = "2021"
default-run = "hyper-stigmergy"

[workspace]
members = [".", "hermes-bridge"]
resolver = "2"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"

# Database & Persistence
mysql_async = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Math & ML
nalgebra = { version = "0.32", features = ["serde-serialize", "rand"] }
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"

# AI / Embeddings
ollama-rs = { version = "0.2", features = ["stream"] }
reqwest = { version = "0.12", features = ["json"] }

# Utilities
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
indexmap = "2.1"
dashmap = "5.5"
parking_lot = "0.12"
regex = "1"
urlencoding = "2.1"
wasmtime = { version = "41.0.3", default-features = false, features = ["cranelift", "runtime"] }

# Graph algorithms
petgraph = { version = "0.6", features = ["serde-1"] }

# Federation HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio-tungstenite = "0.23"
url = "2"

# Observability
prometheus = "0.13"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Authentication
argon2 = "0.5"
jsonwebtoken = "9"

# Discord bot
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

# Code navigation
walkdir = "2"
glob = "0.3"
num_cpus = "1.16"
base64 = "0.21"

# GPU acceleration (optional)
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.14", optional = true }
pollster = { version = "0.3", optional = true }
reedline = "0.10"

# Directories
dirs = "5"

# Workspace dependencies - Hermes Bridge
hermes-bridge = { path = "hermes-bridge", optional = true }

[features]
default = ["gpu"]
gpu = ["wgpu", "bytemuck", "pollster"]
hermes = ["hermes-bridge"]

[dev-dependencies]
tokio-test = "0.4"
wat = "1"

[[bin]]
name = "batch_experiment"
path = "src/bin/batch_experiment.rs"

[[bin]]
name = "investigate"
path = "src/bin/investigate.rs"

[[bin]]
name = "personal_agent"
path = "src/bin/personal_agent.rs"

[[bin]]
name = "tui_codex_demo"
path = "src/bin/tui_codex_demo.rs"
