[package]
name = "hyper-stigmergy"
version = "0.1.0"
edition = "2021"
default-run = "hyper-stigmergy"

[workspace]
members = [".", "external_integrations/hermes/hermes-bridge"]
resolver = "2"

[dependencies]
# Hermes Bridge - real tool execution via Hermes Agent
hermes-bridge = { path = "external_integrations/hermes/hermes-bridge" }

# Async Runtime
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# Database & Persistence
mysql_async = "0.34"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
serde_yaml = "0.9"
ron = "0.8"
bincode = "1.3"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Math & ML
nalgebra = { version = "0.32", features = ["serde-serialize", "rand"] }
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"

# AI / Embeddings
ollama-rs = { version = "0.2", features = ["stream"] }
reqwest = { version = "0.12", features = ["json"] }

# Utilities
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
indexmap = "2.1"
dashmap = "5.5"
parking_lot = "0.12"
regex = "1"
urlencoding = "2.1"
wasmtime = { version = "41.0.3", default-features = false, features = ["cranelift", "runtime"] }

# Graph algorithms
petgraph = { version = "0.6", features = ["serde-1"] }

# Federation HTTP server
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio-tungstenite = "0.23"
url = "2"

# Observability
prometheus = "0.13"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Authentication
argon2 = "0.5"
jsonwebtoken = "9"

# Discord bot
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Job scheduler (cron expressions)
cron = "0.14"

# Code navigation
walkdir = "2"
glob = "0.3"
num_cpus = "1.16"
base64 = "0.21"
aes-gcm = "0.10"
mailparse = "0.16"
imap = "2.4"
native-tls = "0.2"

reedline = "0.10"

# Directories
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
lbug = { version = "0.15.2", optional = true }

[features]
# Native Ladybug graph (`lbug` crate): bundled build needs several GB free disk and CMake.
# Alternatively set LBUG_LIBRARY_DIR + LBUG_INCLUDE_DIR (and LBUG_SHARED=1 for dynamic link); see docs on docs.rs/crate/lbug.
lbug = ["dep:lbug"]

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
tempfile = "3.27.0"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
wat = "1"

[[bin]]
name = "batch_experiment"
path = "src/bin/batch_experiment.rs"

[[bin]]
name = "investigate"
path = "src/bin/investigate.rs"

[[bin]]
name = "personal_agent"
path = "src/bin/personal_agent.rs"

[[bin]]
name = "tui_codex_demo"
path = "src/bin/tui_codex_demo.rs"

[[bin]]
name = "teamd"
path = "src/bin/teamd.rs"

[[bin]]
name = "integrated_agent"
path = "src/bin/integrated_agent.rs"

[[bin]]
name = "integration_test"
path = "src/bin/integration_test.rs"

[[bin]]
name = "deep_test"
path = "src/bin/deep_test.rs"

[[bin]]
name = "hsm-api"
path = "src/bin/hsm_api.rs"

[[bin]]
name = "hsm-bench"
path = "src/bin/hsm_bench.rs"

[[bin]]
name = "hsm-eval"
path = "src/bin/hsm_eval.rs"

[[bin]]
name = "hsm-autoreason"
path = "src/bin/hsm_autoreason.rs"

[[bin]]
name = "hsm-council-demo"
path = "src/bin/hsm_council_demo.rs"

[[bin]]
name = "hsm-business-pack"
path = "src/bin/hsm_business_pack.rs"

[[bin]]
name = "hsm_inbox_draft"
path = "src/bin/hsm_inbox_draft.rs"

[[bin]]
name = "hsm_console"
path = "src/bin/hsm_console.rs"

[[bin]]
name = "hsm_gepa"
path = "src/bin/hsm_gepa.rs"

[[bin]]
name = "hsm_outer_loop"
path = "src/bin/hsm_outer_loop.rs"

[[bin]]
name = "hsm_meta_harness"
path = "src/bin/hsm_meta_harness.rs"

[[bin]]
name = "hsm_cc_orchestrate"
path = "src/bin/hsm_cc_orchestrate.rs"

[[bin]]
name = "hsm_trace2skill"
path = "src/bin/hsm_trace2skill.rs"

[[bin]]
name = "hsm_a2a_adapter"
path = "src/bin/hsm_a2a_adapter.rs"

[[bin]]
name = "hsm_golden"
path = "src/bin/hsm_golden.rs"
required-features = ["lbug"]

[[bin]]
name = "hsm_archviz"
path = "src/bin/hsm_archviz.rs"

[[bin]]
name = "hsm_skills"
path = "src/bin/hsm_skills.rs"

[[bin]]
name = "hsm_diagnostic"
path = "src/bin/hsm_diagnostic.rs"

[[bin]]
name = "hsm-longmemeval"
path = "src/bin/hsm_longmemeval.rs"

[[bin]]
name = "hsm-native-eval"
path = "src/bin/hsm_native_eval.rs"

[[bin]]
name = "kb_builder"
path = "src/bin/kb_builder.rs"
