[package]
name = "hermes-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["HSM-II Team"]
description = "Bridge between HSM-II and Hermes Agent"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HSM-II dependencies (relative paths)
# hyper-stigmergy = { path = "../src" }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
